# backend-v2

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTORS  Caddyfile  Dockerfile  LICENSE  README.md  REUSE.toml  conftest.py  docker-compose.prod.yml  docker-compose.yml  gdal_test.py  gis_catalog.json  gt.sh  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  start.py
.github/workflows/: ci.yml  deploy.yml
.gitlab/merge_request_templates/: Bugfix.md  Feature.md  Infrastructure.md
bash/: run_rebuild.sh  run_temporal.sh
config/: config.py  data_sources.json
config/gis/: catalog.json  cb_colors.json
deploy/: build-frontend.sh  setup.sh  wherewild.service
docker/: aliases.sh  auto_pull_service.sh  entrypoint.sh  rclone.conf.template
docs/: gen_ref.py  index.md  styles.css
docs/api/: index.md  upload-processing.md
docs/libraries/: index.md
docs/scripts/: index.md
scripts/: add_names.py  build_base_features.py  build_id_maps.py  build_locations.py  build_media.py  build_overviews.py  build_species_stats.py  build_temporal.py  build_temporal_rasters.py  build_tree.py  carry_forward.py  check_config.py  download_temporal.py  enrich_temporal.py  enrich_tree.py  gen_colors.py  get_pref_names.py  get_preferred.py  infer_aggregate_raster.py  main.py  merge_regions.py  null_gis_nan.py  polish_tree.py  populate_tree.py  probe_models.py  probe_precip.py  probe_spatial.py  process_positions.py  process_tree.py  rebuild.py  slice_regions.py  sync_gbif.py  train_location_models.py  train_subtree_models.py  train_taxon_model.py
scripts/gis/: build_overviews.py  download_chelsa.py  download_dem.py  download_landcover.py  download_litho.py  download_soil.py  process_gadm.py
tests/: conftest.py  test_docs_gen_ref.py  test_main.py
tests/api/: conftest.py  test_environment.py  test_health.py  test_locations.py  test_main.py  test_occurrences.py  test_rankings.py  test_runtime.py  test_species.py  test_taxa_query.py  test_variables.py
tests/config/: test_config.py
tests/data/: test_config.py  test_custom_upload_processing.py  test_descriptions.py  test_gis_catalog.py  test_gis_lookup.py  test_indexing.py  test_storage.py  (+6 more)
util/: citations.py  config.py  custom_upload_processing.py  descriptions.py  gis.py  gis_lookup.py  indexing.py  models.py  rankings.py  request_cancellation.py  stats.py  storage.py  summary_stats.py  taxa.py  taxa_navigation.py  temporal.py  tile_request.py  tiles.py  units.py  upload.py  weather_tiles.py
wherewild/: stats_repository.py
(+48 files in other folders)
