[project]
name = "wherewild"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pyarrow>=24.0.0",
    "rapidfuzz>=3.14.5",
    "rasterio>=1.5.0",
    "uvicorn[standard]>=0.46.0",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [".venv/*", "*/tests/*", "*/test_*"]

[tool.coverage.report]
include = ["main.py", "scripts/*.py", "scripts/**/*.py", "config/*.py", "util/*.py"]
skip_empty = true
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.12",
]
