[project]
name = "wherewild"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "fastdigest>=0.12.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=2.3.0",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "rapidfuzz>=3.14.5",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.46.0",
    "fsspec[s3]>=2024.1.0",
    "omfiles>=0.4.0",
    "python-multipart>=0.0.29",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: end-to-end tests against real S3 .om files — run with: pt --temporal",
]

[tool.coverage.run]
source = ["."]
omit = [".venv/*", "*/tests/*", "*/test_*"]

[tool.coverage.report]
include = ["main.py", "scripts/*.py", "scripts/**/*.py", "util/*.py"]
skip_empty = true
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.12",
]
